--- a/utils/mqttverifier/package.json
+++ b/utils/mqttverifier/package.json
@@ -1,5 +1,13 @@
 {
+  "private": true,
+  "type": "module",
+  "engines": {
+    "node": ">= 18.12.0"
+  },
   "dependencies": {
-    "mqtt-packet": "^6.6.0"
+    "mqtt-packet": "^8.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.8"
   }
 }
