--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -34,6 +34,7 @@ metrics = "0.21.1"
 metrics-exporter-prometheus = "0.12.1"
 clap = { version = "4.2", features = ["derive"] }
 axum = "0.6.4"
+rand = "0.8.5"
 
 [features]
 default = ["use-rustls"]
