--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "benchmarks"
 version = "0.4.0"
-authors = ["tekjar <raviteja@bytebeam.io>"]
-edition = "2018"
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+publish = false
+rust-version.workspace = true
+edition.workspace = true
+repository.workspace = true
+license.workspace = true
+authors.workspace = true
 
 [dependencies]
 bytes = "1"
