--- a/benchmarks/simplerouter/Cargo.toml
+++ b/benchmarks/simplerouter/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "simplerouter"
 version = "0.1.0"
-edition = "2021"
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+publish = false
+rust-version.workspace = true
+edition.workspace = true
+repository.workspace = true
+license.workspace = true
+authors.workspace = true
 
 [dependencies]
 bytes = "1"
