--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -13,7 +13,7 @@ authors.workspace = true
 
 [dependencies]
 tokio = { version = "1.32", features = ["rt", "time", "net", "io-util", "macros"]}
-serde = { version = "1.0.185", features = ["derive"] }
+serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
 bytes = { version = "1", features = ["serde"] }
 flume = { version = "0.11.0", default-features = false, features = ["async"]}
@@ -24,8 +24,9 @@ tokio-rustls = { version = "0.24", optional = true }
 rustls-webpki = { version = "0.101.4", optional = true }
 tokio-native-tls = { version = "0.3", optional = true }
 rustls-pemfile = { version = "1", optional = true }
-async-tungstenite = { version = "0.22.0", default-features = false, features = ["tokio-runtime"], optional = true }
-ws_stream_tungstenite = { version = "0.10.0", default-features = false, features = ["tokio_io"], optional = true }
+async-tungstenite = { version = "0.23.0", default-features = false, features = ["tokio-runtime"], optional = true }
+# NOTE: change this to use crates.io once https://github.com/najamelan/ws_stream_tungstenite/pull/11 is merged.
+ws_stream_tungstenite = { git= "https://github.com/swanandx/ws_stream_tungstenite", default-features = false, features = ["tokio_io"], optional = true }
 x509-parser = {version= "0.15.1", optional = true}
 futures-util = { version = "0.3.28", optional = true}
 parking_lot = "0.12.1"
@@ -34,7 +35,7 @@ tracing = { version="0.1", features=["log"] }
 tracing-subscriber = { version="0.3.17", features=["env-filter"] }
 metrics = "0.21.1"
 metrics-exporter-prometheus = "0.12.1"
-clap = { version = "4.3", features = ["derive"] }
+clap = { version = "4.4", features = ["derive"] }
 axum = "0.6.20"
 rand = "0.8.5"
 
