feat(rumqttd): verify-client-cert to feature gate rustls client auth (#756)
Co-authored-by: swanandx <73115739+swanandx@users.noreply.github.com>

--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -43,7 +43,8 @@ default = ["use-rustls", "websocket"]
 use-rustls = ["dep:tokio-rustls", "dep:rustls-webpki", "dep:rustls-pemfile", "dep:x509-parser"]
 use-native-tls = ["dep:tokio-native-tls", "dep:x509-parser"]
 websocket = ["dep:async-tungstenite", "dep:tokio-util", "dep:futures-util", "dep:ws_stream_tungstenite"]
-validate-tenant-prefix = []
+verify-client-cert = []
+validate-tenant-prefix = ["verify-client-cert"]
 allow-duplicate-clientid = []
 
 [dev-dependencies]
