chore(rumqttc): Lower the MSRV to Rust version 1.64.0 (#762)

--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -5,7 +5,7 @@ publish = true
 description = "An efficient and robust mqtt client for your connected devices"
 keywords = ["mqtt", "iot", "coap", "http"]
 categories = ["network-programming"]
-rust-version.workspace = true
+rust-version = "1.64.0"
 edition.workspace = true
 repository.workspace = true
 license.workspace = true
