--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -5,7 +5,7 @@ publish = true
 description = "rumqttd is a high performance MQTT broker written in Rust which is light weight and embeddable"
 keywords = ["mqtt", "broker", "iot", "kafka", "nats"]
 categories = ["network-programming"]
-rust-version.workspace = true
+rust-version = "1.70.0"
 edition.workspace = true
 repository.workspace = true
 license.workspace = true
