--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # use mold linker instead of the default linker only on linux
+      - uses: rui314/setup-mold@v1
+        if: ${{ runner.os == 'Linux' }}
+
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: clippy
