--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -38,6 +38,7 @@ clap = { version = "4.4", features = ["derive"] }
 axum = "0.7.4"
 rand = "0.8.5"
 uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
+subtle = "2.5"
 
 [features]
 default = ["use-rustls", "websocket"]
