--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -49,6 +49,7 @@ url = { version = "2", default-features = false, optional = true }
 # proxy
 async-http-proxy = { version = "1.2.5", features = ["runtime-tokio", "basic-auth"], optional = true }
 tokio-stream = "0.1.15"
+fixedbitset = "0.5.7"
 
 [dev-dependencies]
 bincode = "1.3.3"
